--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -50,22 +50,72 @@ URL = "about"
 weight = 1
 
 [[menu.main]]
-name = "project"
-URL = "project"
+name = "course"
+URL = "course"
 weight = 2
+
+[[menu.main]]
+weight = 3
+name = "Pages"
+hasChildren = true
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "teacher"
+  URL = "teacher"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "notice"
+  URL = "notice"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "event"
+  URL = "event"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "scholarship"
+  URL = "scholarship"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "research"
+  URL = "research"
   
 [[menu.main]]
 name = "blog"
 URL = "blog"
-weight = 3
+weight = 4
   
 [[menu.main]]
 name = "Contact"
 URL = "contact"
-weight = 4
+weight = 5
 
 
 # footer menu
+
+[[menu.footer]]
+name = "teacher"
+URL = "teacher"
+
+[[menu.footer]]
+name = "notice"
+URL = "notice"
+
+[[menu.footer]]
+name = "event"
+URL = "event"
+
+[[menu.footer]]
+name = "scholarship"
+URL = "scholarship"
+
+[[menu.footer]]
+name = "research"
+URL = "research"
 
 
 #################### default parameters ################################
