--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -53,6 +53,36 @@ weight = 1
 name = "course"
 URL = "course"
 weight = 2
+
+[[menu.main]]
+weight = 3
+name = "project"
+hasChildren = true
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "teacher"
+  URL = "teacher"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "notice"
+  URL = "notice"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "event"
+  URL = "event"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "scholarship"
+  URL = "scholarship"
+
+  [[menu.main]]
+  parent = "Pages"
+  name = "research"
+  URL = "research"
   
 [[menu.main]]
 name = "blog"
